probearbeit-tim/src/globals.css
@import "tailwindcss";


@font-face {
  font-family: 'Inter';
  src: url('./assets/fonts/InterVariable.woff2') format('woff2');
  font-weight: 100 900;
  font-style: normal;
  font-display: swap;
}


@theme {
  /*   Breakpoints   */
  --breakpoint-*: initial;
  --breakpoint-sm: 390px;
  --breakpoint-md: 834px;
  --breakpoint-lg: 1440px;

  /*   Font   */
  --font-primary: 'Inter', ui-sans-serif, system-ui, sans-serif;

  /*   Neutrals   */
  --color-black: #212429;
  --color-gray-900: #4b4b4b;
  --color-gray-700: #707070;
  --color-gray-500: #9c9c9c;
  --color-gray-70: #f2f2f2;
  --color-white: #ffffff;

  /*   Main   */
  --color-main-green: #00915a;
  --color-main-green-light: #b0cb52;
  --color-main-blue: #0096d2;
  --color-main-gradient: linear-gradient(to right, var(--main-green-light), var(--main-green), var(--main-blue));

  /*   Product A   */
  --color-product-a-yellow-dark: #fbb900;
  --color-product-a-yellow-light: #ffd800;
  --color-product-a-gradient: radial-gradient(var(--product-a-yellow-light), var(--product-a-yellow-dark));

  /*   Product B   */
  --color-product-b-red-dark: #e30011;
  --color-product-b-red-light: #ea5906;
  --color-product-b-blue-dark: #0072cf;
  --color-product-b-blue-light: #289af7;
  --color-product-b-gradient: radial-gradient(var(--product-b-blue-light), var(--product-b-blue-dark));

  /*   Product C   */
  --color-product-c-green: #80ba27;
  --color-product-c-yellow: #f7ec69;
  --color-product-c-gradient: radial-gradient(var(--product-c-yellow), var(--product-c-green));

  --color-product-c-purple: #5a4279;
  --color-product-c-purple-light: #cec2d9;
  --color-product-c-gradient: radial-gradient(var(--product-c-purple-light), var(--product-c-purple));

  /*   Product D   */
  --color-product-d-orange: #ef7500;
  --color-product-d-orange-light: #fed468;
  --color-product-d-green: #00a181;
  --color-product-d-gradient: radial-gradient(var(--product-d-orange-light), var(--product-d-orange));

  /*   Product E   */
  --color-product-e-green-dark: #009e3c;
  --color-product-e-green-light: #95c11c;
  --color-product-e-gradient: radial-gradient(var(--product-d-green-light), var(--product-d-green-dark));

  /*   Product F   */
  --color-product-f-blue-dark: #009cc4;
  --color-product-f-blue-light: #1db9de;
  --color-product-f-gradient: radial-gradient(var(--product-f-blue-light), var(--product-f-blue-dark));

  /*   Product G   */
  --color-product-g-blue: #004587;
  --color-product-g-blue-light: #5897bc;
  --color-product-g-red: #cd1719;
  --color-product-g-gradient: radial-gradient(var(--product-g-blue-light), var(--product-g-blue));
}


@utility container {
  margin-inline: auto;
  
  @variant sm {
    max-width: 390px;
    padding-inline: 16px;
  }

  @variant md {
    max-width: 834px;
    padding-inline: 32px;
  }

  @variant lg {
    max-width: 1440px;
    padding-inline: 104px;
  }
}


@layer base {
  body {
    @apply m-0 p-0 font-primary;
  }

  /*   Text Styles   */

  .h1 {
    @apply font-bold text-[3rem] leading-14;
    
    @variant md {
      @apply font-bold text-[4rem] leading-18;
    }
  }

  .h2 {
    @apply font-normal text-[2rem] leading-10;
  }

  .h3 {
    @apply font-bold text-[1.25rem] leading-6;
  }

  .h4 {
    @apply font-bold text-[1.125rem] leading-6;
  }

  .intro {
    @apply font-light text-[1.25rem] leading-8;
  }

  .body-text {
    @apply font-normal text-[0.9375rem] leading-6;
  }

  .link {
    @apply font-bold text-[0.9375rem] leading-6 underline;
  }

  .button {
    @apply font-bold text-[0.9375rem] leading-6;
  }

  .overline-text {
    @apply font-normal text-[0.875rem] leading-4 uppercase;
  }

  .caption {
    @apply font-normal text-[0.875rem] leading-4;
  }

  .caption-bold {
    @apply font-bold text-[0.875rem] leading-4;
  }
}

